classDiagram

  subgraph Component_1
    class Account {
      +String name (required)
      +String sys_id
      +Date sys_created_on
      +String sys_created_by
      +String business_owners
      +String phone
      +String industry
      +String email
      +String website
      +String customer
      +Boolean archived (default: false)
      +Array contacts
      +Array locations
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
    class contractQuote {
      +String sys_id
      +String short_description
      +String description
      +String start_date
      +String end_date
      +ObjectId quote
      +ObjectId contract_model
      +ObjectId product_offring
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
    class OpportunityLine {
      +String cumulative_acv
      +String service_location
      +ObjectId productOffering
      +String term_month
      +String external_id
      +String sys_updated_on
      +String number
      +String sys_id (unique)
      +ObjectId priceList
      +Embedded unit_of_measurement
      +String cumulative_tcv
      +String sys_updated_by
      +String sys_created_on
      +String unit_net_price
      +String cumulative_arr
      +String sys_created_by
      +String quantity
      +String sys_mod_count
      +String cumulative_mrr
      +ObjectId opportunity
      +String sys_tags
      +String unit_list_price
      +String total_one_time_price
      +String work_notes
      +String external_system
      +ObjectId _id
      +Number __v
    }
    class ProductOfferingPrice {
      +String sys_id (required, unique)
      +String id
      +String name
      +Embedded price
      +String lifecycleStatus
      +Embedded validFor
      +ObjectId productOffering
      +Embedded productOfferingData
      +String priceType
      +String recurringChargePeriodType
      +Embedded unitOfMeasure
      +ObjectId priceList
      +Embedded priceListData
      +String @type
      +String state
      +String href
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
    class QuoteLine {
      +String sys_id (required, unique)
      +String number (required)
      +ObjectId product_offering (required)
      +String term_month
      +String quantity
      +String unit_price
      +ObjectId price_list (required)
      +String unit_of_measurement
      +ObjectId quote (required)
      +String state (default: "draft")
      +String action
      +ObjectId _id
      +Number __v
    }
    class Quote {
      +String number (unique)
      +String sys_id (unique)
      +String state
      +String version
      +String currency
      +String assigned_to
      +String assignment_group
      +String subscription_start_date
      +String subscription_end_date
      +String short_description
      +String expiration_date
      +String active (default: "true")
      +ObjectId opportunity (required)
      +ObjectId account (required)
      +ObjectId price_list
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
    class contractModel {
      +String sys_id
      +String name
      +String description
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
    class PriceList {
      +String sys_id (unique)
      +String name
      +String description
      +String state
      +String country
      +String zip
      +ObjectId account (required)
      +ObjectId contact (required)
      +Boolean archived (default: false)
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
    class Opportunity {
      +String sys_id (unique)
      +String short_description
      +String assignment_group
      +Date estimated_closed_date
      +Date actual_closed_date
      +String description
      +Number term_month
      +String industry
      +String source
      +ObjectId sales_cycle_type
      +Number score
      +String contact
      +Number probability
      +Boolean do_not_share
      +ObjectId stage
      +Boolean do_not_email
      +Boolean do_not_call
      +ObjectId account
      +ObjectId price_list
      +String number
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
    class Contract {
      +ObjectId opportunity
      +ObjectId quote
      +String file_name
      +String download_url
      +Date created_at (default: undefined)
      +Date updated_at (default: undefined)
      +ObjectId _id
      +Number __v
    }
    class Account {
      +String name (required)
      +String sys_id
      +Date sys_created_on
      +String sys_created_by
      +String business_owners
      +String phone
      +String industry
      +String email
      +String website
      +String customer
      +Boolean archived (default: false)
      +Array contacts
      +Array locations
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
    class salesCycleType {
      +String sys_id (required, unique)
      +String name
      +ObjectId _id
      +Number __v
    }
    class Stage {
      +String sys_id (required, unique)
      +String name
      +String type
      +String sys_name
      +String order
      +ObjectId _id
      +Number __v
    }
    class Contact {
      +String sys_id
      +String firstName (required)
      +String lastName (required)
      +String email (required)
      +String phone
      +String password
      +String jobTitle
      +Boolean isPrimaryContact (default: true)
      +Boolean active (default: true)
      +ObjectId account (required)
      +ObjectId location
      +Boolean archived (default: false)
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
    class CatalogCategoryRelations {
      +String sys_id (required, unique)
      +String sys_updated_by (required, default: "admin")
      +Date sys_created_on (required)
      +Number sys_mod_count (required, default: 0)
      +String external_id (default: "")
      +String source (required)
      +Date sys_updated_on (required)
      +String sys_tags (default: "")
      +String sys_created_by (required, default: "admin")
      +String external_source (default: "")
      +String target (required)
      +ObjectId catalog (required)
      +ObjectId category (required)
      +ObjectId _id
      +Number __v
    }
    class ProductOfferingCatalog {
      +String name (required)
      +String latitude
      +String longitude
      +String street
      +String city
      +String state
      +String country
      +String zip
      +ObjectId account (required)
      +ObjectId contact (required)
      +Boolean archived (default: false)
      +ObjectId _id
      +Date createdAt
      +Date updatedAt
      +Number __v
    }
  end

  subgraph Component_2
    class Intent {
      +String tag
      +Array patterns
      +Array responses
      +Array context
      +ObjectId _id
      +Number __v
    }
  end

  subgraph Component_3
    class User {
      +String serviceNowId (required)
      +String firstName (required)
      +String lastName (required)
      +String email (required, unique)
      +String mobilePhone (required)
      +String password (required)
      +String type (required, enum: [individual,company])
      +String companyName
      +Number location.latitude
      +Number location.longitude
      +String location.address
      +String location.city
      +String location.state
      +String location.country
      +String location.postalCode
      +Date createdAt (default: undefined)
      +Date updatedAt (default: undefined)
      +ObjectId _id
      +Number __v
    }
  end

  Account --> Contact : "contacts"
  Account --> Location : "locations"
  CatalogCategoryRelations --> ProductOfferingCatalog : "catalog"
  CatalogCategoryRelations --> ProductOfferingCategory : "category"
  Contact --> Account : "account"
  Contact --> Location : "location"
  ProductOffering --> ProductOfferingCategory : "category"
  ProductOffering --> ProductSpecification : "productSpecification"
  Account --> Contact : "contacts"
  Account --> Location : "locations"
  Contract --> Opportunity : "opportunity"
  Contract --> Quote : "quote"
  contractQuote --> Quote : "quote"
  contractQuote --> contractModel : "contract_model"
  contractQuote --> ProductOffering : "product_offring"
  Location --> Account : "account"
  Location --> Contact : "contact"
  Opportunity --> salesCycleType : "sales_cycle_type"
  Opportunity --> Stage : "stage"
  Opportunity --> Account : "account"
  Opportunity --> PriceList : "price_list"
  OpportunityLine --> ProductOffering : "productOffering"
  OpportunityLine --> PriceList : "priceList"
  OpportunityLine --> Opportunity : "opportunity"
  ProductOffering --> ProductOfferingCategory : "category"
  ProductOffering --> ProductSpecification : "productSpecification"
  ProductOfferingPrice --> ProductOffering : "productOffering"
  ProductOfferingPrice --> PriceList : "priceList"
  Quote --> Opportunity : "opportunity"
  Quote --> Account : "account"
  Quote --> PriceList : "price_list"
  QuoteLine --> ProductOffering : "product_offering"
  QuoteLine --> PriceList : "price_list"
  QuoteLine --> Quote : "quote"
